[package]
name = "subby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcemeta = { git = "https://github.com/novedevo/gcemeta" }
hyper = "0.14"
anyhow = "1"
# thiserror = "1"
tokio = { version = "1", features = ["full"] }

google-pubsub1 = "3.0.0+20220221"
