[package]
name = "subby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
hyper-rustls = "0.22.1"
anyhow = "1"
# thiserror = "1"
tokio = { version = "1", features = ["full"] }

# google-pubsub1 = "3.0.0+20220221"
reqwest = "*"
yup-oauth2 = "6"

serde = "1"
serde_json = "1"
time = "0.3"
