[package]
name = "subby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14"
hyper-rustls = "0.22.1"
anyhow = "1"

reqwest = "0.11"
yup-oauth2 = "6"

serde = "1"
serde_json = "1"
time = "0.3"
